src/test/error/import5.lns
import test.error.Sub5;

fn func(val:Sub5) { // error
}

Sub5.test.func();
Sub5.test.func2(); // error

